--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ script:
   
   # dnsmasq rules
   - mkdir -p dist/dnsmasq
+  - pushd dist/dnsmasq
   - echo -e "\n# easylistchina+easylist - `date +'%Y-%m-%d %T'`\n" >> adblock.conf
   - curl https://easylist-downloads.adblockplus.org/easylistchina+easylist.txt | grep ^\|\|[^\*]*\^$ | sed -e 's:||:address\=\/:' -e 's:\^:/127\.0\.0\.1:' >> adblock.conf
   - echo -e "\n" >> adblock.conf
