curl url add single quotes

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,4 @@ deploy:
     branch: master
 
 script:
-  - curl -kL https://github.com/pexcn/daily/raw/master/generate.sh | bash -e
+  - curl -kL 'https://github.com/pexcn/daily/raw/master/generate.sh' | bash -e
