shadowrocket: gfwlist support telegram
IP-CIDR from bgp.he.net, compress with cidrmerge

--- a/template/shadowrocket/gfwlist.conf
+++ b/template/shadowrocket/gfwlist.conf
@@ -24,6 +24,15 @@ DOMAIN-KEYWORD,telegram,PROXY,force-remote-dns
 DOMAIN-KEYWORD,whatsapp,PROXY,force-remote-dns
 DOMAIN-KEYWORD,spotify,PROXY,force-remote-dns
 
+# Telegram
+IP-CIDR,91.108.4.0/22,PROXY,no-resolve
+IP-CIDR,91.108.8.0/21,PROXY,no-resolve
+IP-CIDR,91.108.16.0/21,PROXY,no-resolve
+IP-CIDR,91.108.36.0/22,PROXY,no-resolve
+IP-CIDR,91.108.56.0/22,PROXY,no-resolve
+IP-CIDR,109.239.140.0/24,PROXY,no-resolve
+IP-CIDR,149.154.160.0/20,PROXY,no-resolve
+
 # LAN
 IP-CIDR,0.0.0.0/32,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
