shadowrocket: fix suffix for china domains

--- a/template/shadowrocket/gfwlist.conf
+++ b/template/shadowrocket/gfwlist.conf
@@ -6,7 +6,7 @@ dns-server =
 loglevel = warning
 
 [Rule]
-DOMAIN-SUFFIX,.cn,DIRECT
+DOMAIN-SUFFIX,cn,DIRECT
 
 # GFWList
 ___GFWLIST_DOMAINS_PLACEHOLDER___
