--- a/template/shadowrocket/gfwlist.conf
+++ b/template/shadowrocket/gfwlist.conf
@@ -32,6 +32,10 @@ IP-CIDR,91.108.36.0/22,PROXY,no-resolve
 IP-CIDR,91.108.56.0/22,PROXY,no-resolve
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 IP-CIDR,149.154.160.0/20,PROXY,no-resolve
+IP-CIDR6,2001:67c:4e8::/48,PROXY,no-resolve
+IP-CIDR6,2001:b28:f23c::/48,PROXY,no-resolve
+IP-CIDR6,2001:b28:f23d::/48,PROXY,no-resolve
+IP-CIDR6,2001:b28:f23f::/48,PROXY,no-resolve
 
 # LAN
 IP-CIDR,0.0.0.0/32,DIRECT
