refine update time tag

--- a/template/shadowrocket/gfwlist.conf
+++ b/template/shadowrocket/gfwlist.conf
@@ -1,3 +1,7 @@
+#
+# Update: ___UPDATE_TIME_PLACEHOLDER___
+#
+
 [General]
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, e.crashlytics.com, captive.apple.com
