Revert "update netmask to 2.4.3"
This reverts commit 8d73475b8d2ae3ac756856a4ac1260ea728065eb.
The new version seems not working.

--- a/tools/netmask/Makefile
+++ b/tools/netmask/Makefile
@@ -1,10 +1,10 @@
 CC ?= gcc
 DESTDIR ?= /usr/local
-SRC ?= main.c netmask.c errors.c
+SRC ?= netmask.c errors.c
 BIN ?= netmask
 
 netmask: $(SRC)
-	$(CC) -O3 -ffast-math $^ -o $@ -DPACKAGE=\"netmask\" -DVERSION=\"2.4.3\" -DSTDC_HEADERS=1 -DHAVE_SYSLOG_H=1 -DHAVE_VPRINTF=1 -DHAVE_STRERROR=1 -DHAVE_STRTOUL=1
+	$(CC) -O3 -ffast-math $^ -o $@ -DPACKAGE=\"netmask\" -DVERSION=\"2.3.7\" -DSTDC_HEADERS=1 -DHAVE_SYSLOG_H=1 -DHAVE_VPRINTF=1 -DHAVE_STRERROR=1 -DHAVE_STRTOUL=1
 
 install: $(BIN)
 	install -d $(DESTDIR)/bin/
