sync dist to gh-pages release
dirty fix #19, when I need to delete the file in gh-pages branch, I have to manually delete it.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
   apt:
     packages:
       - aggregate
+      - git
 
 env:
   global:
@@ -22,7 +23,7 @@ script:
 
 deploy:
   provider: pages
-  local-dir: dist
+  local-dir: release
   target-branch: gh-pages
   keep-history: true
   skip-cleanup: true
