shadowrocket: ipv6 support
close #30

--- a/template/shadowrocket/gfwlist.template
+++ b/template/shadowrocket/gfwlist.template
@@ -5,7 +5,7 @@ bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,1
 dns-server =
 loglevel = warning
 update-url = https://pexcn.me/daily/shadowrocket/gfwlist.conf
-ipv6 = false
+ipv6 = true
 
 [Rule]
 DOMAIN-SUFFIX,cn,DIRECT
