--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
-dist: xenial
-language: bash
+os: linux
+dist: bionic
+language: shell
 
 branches:
   only: master
@@ -22,13 +23,14 @@ script:
   - ./generate.sh
 
 deploy:
+  edge: true
   provider: pages
-  local-dir: release
-  target-branch: gh-pages
-  keep-history: true
-  skip-cleanup: true
-  github-token: ${token}
-  #name: Travis CI
-  #email: travis.ci.build@gmail.com
+  local_dir: release
+  target_branch: gh-pages
+  keep_history: true
+  name: Deployment Bot
+  email: deploy@travis-ci.org
+  commit_message: $(date '+%Y-%m-%d %H:%M:%S')
+  token: ${token}
   on:
     branch: master
