--- a/tools/netaggregate/Makefile
+++ b/tools/netaggregate/Makefile
@@ -1,5 +1,5 @@
 netaggregate: netaggregate.cpp
-	c++ -O3 -o netaggregate netaggregate.cpp -s -static -Wl,--build-id=none
+	c++ -O3 -o netaggregate netaggregate.cpp -s -Wl,--build-id=none
 
 clean:
 	rm netaggregate
