--- a/template/shadowrocket/gfwlist.template
+++ b/template/shadowrocket/gfwlist.template
@@ -9,10 +9,10 @@ ipv6 = true
 [Rule]
 DOMAIN-SUFFIX,cn,DIRECT
 
-# GFWList
-___GFWLIST_DOMAINS_PLACEHOLDER___
+# gfwlist
+___GFWLIST_PLACEHOLDER___
 
-# Keywords
+# keywords
 DOMAIN-KEYWORD,google,PROXY,force-remote-dns
 DOMAIN-KEYWORD,youtube,PROXY,force-remote-dns
 DOMAIN-KEYWORD,gmail,PROXY,force-remote-dns
@@ -25,7 +25,7 @@ DOMAIN-KEYWORD,telegram,PROXY,force-remote-dns
 DOMAIN-KEYWORD,whatsapp,PROXY,force-remote-dns
 DOMAIN-KEYWORD,spotify,PROXY,force-remote-dns
 
-# Telegram
+# telegram
 IP-CIDR,91.108.4.0/22,PROXY,no-resolve
 IP-CIDR,91.108.8.0/21,PROXY,no-resolve
 IP-CIDR,91.108.16.0/21,PROXY,no-resolve
@@ -34,7 +34,7 @@ IP-CIDR,91.108.56.0/22,PROXY,no-resolve
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 IP-CIDR,149.154.160.0/20,PROXY,no-resolve
 
-# WhatsApp
+# whatsapp
 IP-CIDR,31.13.64.51/32,PROXY,no-resolve
 IP-CIDR,31.13.65.49/32,PROXY,no-resolve
 IP-CIDR,31.13.66.49/32,PROXY,no-resolve
@@ -203,7 +203,7 @@ IP-CIDR,208.43.115.192/27,PROXY,no-resolve
 IP-CIDR,208.43.117.79/32,PROXY,no-resolve
 IP-CIDR,208.43.122.128/27,PROXY,no-resolve
 
-# LAN
+# lan
 IP-CIDR,0.0.0.0/8,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,100.64.0.0/10,DIRECT
