--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,4 @@ jobs:
         run: ./generate.sh
       - name: Deploy
         if: github.event_name == 'push'
-        run: echo
+        run: true
