fix github actions (#60)
FIxed, but I don't know how to fix.
Close #22

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,6 @@ jobs:
           submodules: true
       - name: Build
         run: ./generate.sh
-#      - name: Deploy
-#        if: github.event_name == 'push'
-#        run: true
+      - name: Deploy
+        if: github.event_name == 'push'
+        run: true
