--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,8 @@ jobs:
       - name: Build
         run: |
           ./generate.sh
-          ls -al
-          pwd
-          whoami
-          ls -al release
+          echo $GITHUB_ENV
+          echo $GITHUB_CONTEXT
       - name: Deploy
         if: github.event_name == 'push'
         run: |
