--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Build
         run: |
           ./generate.sh
-          git config -l
           echo $GITHUB_ENV
           echo $GITHUB_CONTEXT
+          echo $GITHUB_REPOSITORY
       - name: Deploy
         if: github.event_name == 'push'
         run: |
