--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,10 @@ jobs:
       - name: Build
         run: |
           ./generate.sh
-          GITHUB_USERNAME=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 1)
+          #GITHUB_USERNAME=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 1)
           git add .
           git commit -m "$(date '+%Y-%m-%d %H:%M:%S')"
+          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git gh-pages
       - name: Deploy
         if: github.event_name == 'push'
         run: |
