--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Build
         run: |
           ./generate.sh
+
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           #GITHUB_USERNAME=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 1)
           git add .
           git commit -m "$(date '+%Y-%m-%d %H:%M:%S')"
