--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,14 +23,15 @@ jobs:
       - name: Build
         run: |
           ./generate.sh
-          git remote -v
 
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-          #GITHUB_USERNAME=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 1)
+
           git add .
           git commit -m "$(date '+%Y-%m-%d %H:%M:%S')"
-          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git gh-pages
+          #GITHUB_USERNAME=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 1)
+          #git push https://${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git gh-pages
+          git push origin gh-pages
       - name: Deploy
         if: github.event_name == 'push'
         run: |
