--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build
         run: ./generate.sh
       - name: Deploy
-        if: github.event_name == 'push'
+        if: github.event_name == 'schedule'
         run: |
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
