--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add .
-          git commit -m "$(date '+%Y-%m-%d %H:%M:%S')"
+          git commit -m "$(date '+%Y-%m-%d %H:%M:%S')" || true
           git push origin gh-pages
 
           #GITHUB_USERNAME=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 1)
