Revert "deploy on schedule or push"
This reverts commit affdf443ec8f6f93f3e0d7746c0ec041693a2027.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build
         run: ./generate.sh
       - name: Deploy
-        if: github.event_name == 'schedule' || github.event_name == 'push'
+        if: github.event_name == 'schedule'
         run: |
           cd release
           git config user.name github-actions[bot]
