--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,11 @@ on:
     # workwaround for cannot set timezone, cron will start on Asia/Taipei 02:00
     - cron: "0 18 * * *"
   workflow_dispatch:
+    inputs:
+      deploy:
+        description: 'Whether to deploy to gh-pages branch'
+        required: true
+        default: '0'
 
 env:
   TZ: Asia/Taipei
@@ -24,7 +29,7 @@ jobs:
       - name: Build
         run: ./generate.sh
       - name: Deploy
-        if: github.event_name == 'schedule'
+        if: ${{ github.event_name == 'schedule' || github.event.inputs.deploy == '1' }}
         run: |
           # update gh-pages
           git clone https://github.com/${{ github.repository }}.git gh-pages -b gh-pages --depth 1 --single-branch
